# geometry_processing

./: .gitignore  README.md  dependencies.txt  globals.py  requirements.txt
cache/: fc2_mean.npy  fc2_std.npy  image_mean.npy  image_std.npy  mvcnn_test_accuracy_shuffled.npy  svm_top_k_1.pkl  svm_top_k_10.pkl  svm_top_k_10_confusion.npy  svm_top_k_10_random.pkl  svm_top_k_10_random_confusion.npy  svm_top_k_15.pkl  svm_top_k_15_confusion.npy  svm_top_k_15_random.pkl  svm_top_k_15_random_confusion.npy  svm_top_k_1_confusion.npy  svm_top_k_1_random.pkl  svm_top_k_1_random_confusion.npy  svm_top_k_20.pkl  svm_top_k_20_confusion.npy  svm_top_k_20_random.pkl  svm_top_k_20_random_confusion.npy  svm_top_k_25.pkl  svm_top_k_25_confusion.npy  svm_top_k_25_random.pkl  svm_top_k_25_random_confusion.npy  svm_top_k_3.pkl  svm_top_k_3_confusion.npy  svm_top_k_3_random.pkl  svm_top_k_3_random_confusion.npy  svm_top_k_5.pkl  svm_top_k_5_confusion.npy  svm_top_k_5_random.pkl  svm_top_k_5_random_confusion.npy  svm_top_k_7.pkl  svm_top_k_7_confusion.npy  svm_top_k_7_random.pkl  svm_top_k_7_random_confusion.npy
classification/: linear_classifier.py  multiview_model.py  mvcnn_2.py  mvcnn_FPS.py
classifier/: classify.py  requirements.txt
classify_features/: classify.py
data/: saliency_labels_train.txt  saliency_labels_valid.txt
evaluation/: confusion_matrix.npy  view_confusion_matrix.py  view_train_validation_logs.py
generate_views/: CMakeLists.txt  README.md
generate_views/include/helpers/: RandomUtils.h
generate_views/include/render/: OpenGLStuff.h  Phong.h  Program.h
generate_views/src/: main.cpp
generate_views/src/helpers/: RandomUtils.cpp
generate_views/src/render/: OpenGLStuff.cpp  Phong.cpp
generate_views/src/render/shaders/: phong.frag  phong.geom  phong.vert
models/: multiview_cnn.py  multiview_svm.py  saliency.py
scripts/: generate_confusion_matrix.py  generate_saliency_data.py  plot_logs.py  precompute_fc_mean_std.py  precompute_image_mean_std.py  test_mvcnn.py  test_saliency.py  train_saliency.py  train_svm.py  view_confusion_matrix.py  view_salient.py
train_cnn/: classify_keras.py  dataset.py  helpers.py  requirements.txt  saliency.py
utils/: GroupedDatagen.py  custom_datagen.py  helpers.py
